Fixed non-predictable collection fields